--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -8,19 +8,31 @@ confinement: strict # use 'strict' once you have the right plugs and slots
 
 apps:
   devrantron:
-    command: ./devrantron
-    plugs: [ "network", "x11", "unity7", "opengl", "browser-support" ]
+    command: desktop-launch $SNAP/devrantron/devrantron
+    plugs: [ network, unity7, opengl,browser-support ]
 
 parts:
   build-devrantron:
     plugin: nil
+    after: [desktop-gtk3]        
+    stage-packages:
+      - libnss3
+      - fontconfig-config
+      - libxss1
+      - libgconf-2-4
+      - gnome-themes-standard
+      - libappindicator1
+      - libdbusmenu-glib4
+      - libnotify4
+      - libunity9
     build: |
         npm i
         npm i 7zip-bin-linux 
         npm run ci:build
         npm run package:dir
+        mkdir ../install/devrantron
         cd release
-        mv linux-unpacked/* ../../install
+        mv linux-unpacked/* ../../install/devrantron
     filesets:
        binaries:
         - ./*
